  intended to reproduce the behavior of the profiler Python used more
  than 7 years ago, and isn't interesting anymore.  HotProfile intended
  to provide a faster profiler (but producing less information), and
  that's a worthy goal we intend to meet via a different approach (but
  without losing information).

- Profile.calibrate() has a new implementation that should deliver
  a better system-specific calibration constant.  Calibration must still
  be done manually (see the docs for the profile module).

- quopri's encode and decode methods take an optional header parameter,
  which indicates whether output is intended for the header 'Q' encoding.

Tools/Demos

- Demo/dns was removed.  It no longer serves any purpose; a package
  derived from it is now maintained by Anthony Baxter, see
  http://PyDNS.SourceForge.net.

Build

C API

- PyLong_AsLongLong() now accepts int (as well as long) arguments.
  Consequently, PyArg_ParseTuple's 'L' code also accepts int (as well
  as long) arguments.

New platforms

Tests

Windows

- The signal module now supports SIGBREAK on Windows, thanks to Steven
  Scott.  Note that SIGBREAK is unique to Windows.  The default SIGBREAK
  action remains to call Win32 ExitProcess().  This can be changed via
  signal.signal().  For example:

  # Make Ctrl+Break raise KeyboardInterrupt, like Python's default Ctrl+C
  # (SIGINT) behavior.
  import signal
  signal.signal(signal.SIGBREAK,
                signal.default_int_handler)

  try:
      while 1:
          pass
  except KeyboardInterrupt:
      # We get here on Ctrl+C or Ctrl+Break now; if we had not changed
      # SIGBREAK, only on Ctrl+C (and Ctrl+Break would terminate the
      # program without the possibility for any Python-level cleanup).
      print "Clean exit"


What's New in Python 2.2a4?
Release date: 28-Sep-2001
===========================

Type/class unification and new-style classes

- pydoc and inspect are now aware of new-style classes;